Fix spacing in access status message

--- a/ui/component/joinMembershipCard/internal/previewPage/internal/membershipDetails/style.scss
+++ b/ui/component/joinMembershipCard/internal/previewPage/internal/membershipDetails/style.scss
@@ -3,6 +3,10 @@
   border-radius: var(--border-radius);
   padding: var(--spacing-s);
 
+  label {
+    margin-bottom: 0 !important;
+  }
+
   &.red {
     background-color: rgba(255, 0, 0, 0.2);
     border: 2px solid rgba(255, 0, 0, 0.6);
